--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,19 +5,18 @@ on:
 
 jobs:
   deploy:
-    runs-on: windowns-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: "14.x"
       - name: Build web-app
-      run: |
-        npm ci
-        npm run build
+        run: |
+          npm ci
+          npm run build
       - name: Deploy to gh-pages
-      uses: peaceiris/actions-gh-page@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build
-
+        uses: peaceiris/actions-gh-page@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
