--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Build web-app
         run: |
           npm ci
+          npm install
           npm run build
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
