--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,9 +13,9 @@ jobs:
           node-version: "14.x"
       - name: Build web-app
         run: |
-
-          npm ci
+          npm install
           npm run build
+          npm ci
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
