--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-codar",
-  "homepage": "https://github.com/MarkoneDias/project-Costs.git/index.html",
+  "homepage": "https://github.com/MarkoneDias/project-Costs.git/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
